Add update and delete statement support